feat(exhibition)：处理展览角色编辑界面的角色/皮肤选择密度、实体悬停名字，以及对话气泡可读性相关的问题。